[tool.poetry]
name = "newversion"
version = "1.8.2"
description = "PEP 440 version manager"
authors = ["Vlad Emelianov <vlad.emelianov.nz@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/vemel/newversion"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["version", "pep440"]
packages = [
    { include = "newversion" },
]
include = [
    "LICENSE",
    "newversion/py.typed",
]

[tool.poetry.scripts]
newversion = 'newversion.main:main_cli'

[tool.poetry.urls]
"Documentation" = "https://newversion.readthedocs.io/en/latest/"
"Source" = "https://github.com/vemel/newversion"
"Tracker" = "https://github.com/vemel/newversion/issues"

[tool.poetry.dependencies]
python = ">=3.6.10,<4.0.0"
packaging = ">=20.0"
typing-extensions = {version = ">=3.7.4", python = "<3.8"}

[tool.poetry.dev-dependencies]
black = "21.9b0"
isort = "5.9.3"
handsdown = "0.4.1"
pytest = "6.2.5"
flake8 = "4.0.1"
pytest-cov = "3.0.0"
codecov = "2.1.12"
twine = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@overload",
    "if sys.version_info",
]
ignore_errors = true
omit = [
    ".venv/*",
    "tests/*",
]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = [
    "newversion",
    "tests",
]
src_paths = []

[tool.black]
line-length = 100
include = '(newversion|tests)/.*\.pyi?$'
target-version = [
    'py36',
    'py37',
    'py38',
    'py39',
]
