[metadata]
name = newversion
version = 1.8.0
description = Your version manager
author = Vlad Emelianov
author_email = vlad.emelianov.nz@gmail.com
url = https://github.com/vemel/newversion
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = pep440, versioning, version, ci, automation
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Typing :: Typed
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://newversion.readthedocs.io/en/latest/
    Source = https://github.com/vemel/newversion
    Tracker = https://github.com/vemel/newversion/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    typing-extensions; python_version < '3.8'

[options.package_data]
newversion =
    py.typed

[options.entry_points]
console_scripts = 
    newversion = newversion.main:main_cli

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs,build,dist,test_*.py
ignore = E203,W503,E501
max-complexity = 14

[mypy]
python_version = 3.8
warn_return_any = False
warn_unused_ignores = False
warn_unused_configs = True
disallow_untyped_defs = True
ignore_missing_imports = True
ignore_errors = False

[mypy-tests.*]
ignore_errors = True
